[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/enemyMelee.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Hit and Hut/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hit and Hut/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://ShowHealht.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Melee",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.763
height = 14.3846

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 4
collision_mask = 2147483651
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Melee"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.500565, 2.16912 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.234108, 2.80933 )
rotation = -1.5708

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_layer = 64
collision_mask = 8

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.743254, 1.11488 )
scale = Vector2( 2.74665, 1.63177 )

[node name="Control" parent="." instance=ExtResource( 8 )]
margin_left = -1.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 31.0

[node name="TextureRect" parent="Control" index="0"]
margin_left = -8.93724
margin_top = -31.2055
margin_right = 11.0628
margin_bottom = -11.2055

[node name="Label" parent="Control" index="1"]
margin_left = -8.54353
margin_top = -31.6149
margin_right = 11.4565
margin_bottom = -10.6149
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="Control"]
